; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_dstr_left.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_dstr_left.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dstr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dstr_left(%struct.dstr* %0, %struct.dstr* %1, i64 %2) #0 {
  %4 = alloca %struct.dstr*, align 8
  %5 = alloca %struct.dstr*, align 8
  %6 = alloca i64, align 8
  store %struct.dstr* %0, %struct.dstr** %4, align 8
  store %struct.dstr* %1, %struct.dstr** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.dstr*, %struct.dstr** %4, align 8
  %8 = load i64, i64* %6, align 8
  %9 = call i32 @dstr_resize(%struct.dstr* %7, i64 %8)
  %10 = load %struct.dstr*, %struct.dstr** %4, align 8
  %11 = load %struct.dstr*, %struct.dstr** %5, align 8
  %12 = icmp ne %struct.dstr* %10, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %3
  %14 = load %struct.dstr*, %struct.dstr** %4, align 8
  %15 = getelementptr inbounds %struct.dstr, %struct.dstr* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.dstr*, %struct.dstr** %5, align 8
  %18 = getelementptr inbounds %struct.dstr, %struct.dstr* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @memcpy(i32 %16, i32 %19, i64 %20)
  br label %22

22:                                               ; preds = %13, %3
  ret void
}

declare dso_local i32 @dstr_resize(%struct.dstr*, i64) #1

declare dso_local i32 @memcpy(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
